test/DaedalusCompiler.Tests/SemanticErrors/ReferenceResolvingVisitorTests.cs
namespace DaedalusCompiler.Tests.SemanticErrors
{
    public class ReferenceResolvingVisitorTests : BaseSemanticErrorsTests
    {
        
    }
}